src/go/k8s/config/webhook/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-redpanda-vectorized-io-v1alpha1-cluster
  failurePolicy: Fail
  name: mcluster.kb.io
  rules:
  - apiGroups:
    - redpanda.vectorized.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-redpanda-vectorized-io-v1alpha1-cluster
  failurePolicy: Fail
  name: vcluster.kb.io
  rules:
  - apiGroups:
    - redpanda.vectorized.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-redpanda-vectorized-io-v1alpha1-console
  failurePolicy: Fail
  name: vconsole.kb.io
  rules:
  - apiGroups:
    - redpanda.vectorized.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - consoles
  sideEffects: None
